--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -4,26 +4,14 @@
     // Per altre informazioni, visitare: https://go.microsoft.com/fwlink/?linkid=830387
     "version": "0.2.0",
     "configurations": [
+
         {
             "type": "lldb",
             "request": "launch",
-            "name": "Cargo test",
-            "cargo": {
-                "args": [
-                    "test",
-                    "--no-run",
-                    "--lib"
-                ]
-            },
-            "args": []
-        },
-        {
-            "type": "lldb",
-            "request": "launch",
-            "name": "Debug",
-            "program": "${workspaceFolder}/<executable file>",
+            "name": "Launch",
+            "program": "/Sistem/MoodProv/menu",
             "args": [],
-            "cwd": "${workspaceFolder}"
+            "cwd": "/Sistem/MoodProv"
         }
     ]
 }
